# colonize

./: Cargo.toml
.cargo/: config.toml
assets/: bodies.toml
src/: body.rs  bvh.rs  camera.rs  main.rs  octree.rs
