[package]
name = "colonize"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12"
bevy-inspector-egui = { version = "0.20", optional = true } # Incompatible with bevy 0.12
toml = "0.8"
rand = "0.8"

[features]
inspector = ["dep:bevy-inspector-egui"]

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
